--- a/src/i18n/messages/zh.json
+++ b/src/i18n/messages/zh.json
@@ -128,5 +128,70 @@
     "contact_tip": "其他联系方式",
     "rating_tip": "您对 ShipAny 的看法如何？",
     "placeholder": "在这里留下您的反馈..."
+  },
+  "common": {
+    "video_not_supported": "您的浏览器不支持视频标签。",
+    "pause_video": "暂停",
+    "play_video": "播放",
+    "unmute_video": "取消静音",
+    "mute_video": "静音",
+    "no_media_available": "没有媒体可用"
+  },
+  "promptEngine": {
+    "header": {
+      "title": "提示引擎",
+      "subtitle": "用 AI 能力为你的图片进行编辑"
+    },
+    "tabs": {
+      "imageToImage": "图生图",
+      "textToImage": "文生图"
+    },
+    "refImage": {
+      "title": "参考图片",
+      "count": "{count}/{max}",
+      "upload": {
+        "ctaEmpty": "添加图片",
+        "ctaMore": "继续添加",
+        "hint": "最大 50MB • 拖拽上传或点击选择"
+      }
+    },
+    "mainPrompt": {
+      "title": "主要提示词",
+      "placeholder": "描述你希望如何编辑图片...(例如：更鲜艳、添加日落背景、卡通风格等)"
+    },
+    "buttons": {
+      "copy": "复制",
+      "generate": "立即生成",
+      "generating": "生成中..."
+    },
+    "status": {
+      "editing": "正在编辑你的图片...",
+      "hint": "AI 正在施展魔法，通常需要 30-60 秒..."
+    },
+    "gallery": {
+      "title": "输出画廊",
+      "subtitle": "你的极速 AI 作品将立即展示在这里",
+      "download": "下载"
+    },
+    "empty": {
+      "title": "随时准备开始生成",
+      "hintImageToImage": "上传图片并输入提示词即可开始",
+      "hintTextToImage": "输入你的提示词，释放 Nano Banana AI 图像编辑的力量"
+    }
+  },
+  "styleGallery": {
+    "section": {
+      "badge": "🔥 热门模板",
+      "title": "最受欢迎的 AI 照片编辑模板",
+      "description": "发现由 Nano Banana AI 驱动的流行社媒风格，用我们的 Gemini AI 图像模板创作爆款内容。"
+    },
+    "slider": {
+      "before": "前",
+      "after": "后"
+    },
+    "card": {
+      "trending": "🔥 热门"
+    },
+    "loadMore": "加载更多模板"
   }
 }
